[gd_scene load_steps=5 format=2]

[ext_resource path="res://fonts/Kenney Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://score/ScoringArea.tscn" type="PackedScene" id=2]
[ext_resource path="res://score/ScoreManager.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 35
font_data = ExtResource( 1 )

[node name="ScoreManager" type="Node"]
script = ExtResource( 3 )

[node name="ScoringArea1" parent="." instance=ExtResource( 2 )]
pause_mode = 1
position = Vector2( -20, 0 )

[node name="ScoringArea2" parent="." instance=ExtResource( 2 )]
pause_mode = 1
position = Vector2( 1300, 0 )

[node name="ScoreLabel1" type="Label" parent="."]
margin_right = 640.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel2" type="Label" parent="."]
margin_left = 640.0
margin_right = 1280.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="ScoringArea1" to="." method="_on_ScoringArea_body_entered" binds= [ 2 ]]
[connection signal="body_entered" from="ScoringArea2" to="." method="_on_ScoringArea_body_entered" binds= [ 1 ]]
